Rectify env variables
Signed-off-by: Matt Provost <provomat@amazon.com>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -12,10 +12,7 @@ on:
 
 env:
   CI: 1
-  TEST_OPENSEARCH_DASHBOARDS_HOST: localhost
-  TEST_OPENSEARCH_DASHBOARDS_PORT: 6610
-  TEST_OPENSEARCH_TRANSPORT_PORT: 9403
-  TEST_OPENSEARCH_PORT: 9400
+  GCS_UPLOAD_PREFIX: fake
   NODE_OPTIONS: "--max-old-space-size=6144 --dns-result-order=ipv4first"
 
 jobs:
