Add build job prereq
Signed-off-by: Matt Provost <provomat@amazon.com>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -219,6 +219,7 @@ jobs:
             suffix: windows-x64
             script: build-platform --windows --skip-os-packages
     runs-on: ${{ matrix.os }}
+    needs: build
     defaults:
       run:
         working-directory: ./artifacts
