Runtime check of value
Signed-off-by: Matt Provost <provomat@amazon.com>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -271,7 +271,7 @@ jobs:
       - name: Update OUI version in OSD
         run: |
           find . -type f -name package.json -exec sed -i 's/"@elastic\/eui": ".*"/"@elastic\/eui": "file:${{ env.OUI_PATH }}"/g' {} \;
-
+          cat package.json
 
       - name: Get package version
         run: |
