--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "yo/meow": "^9.0.0"
   },
   "pre-commit": [
-    "yarn lint"
+    "lint"
   ],
   "dependencies": {
     "@types/chroma-js": "^2.4.0",
