Update jest-cli to 29.7.0
Signed-off-by: Josh Romero <rmerqg@amazon.com>

--- a/scripts/jest/config.json
+++ b/scripts/jest/config.json
@@ -46,5 +46,6 @@
   },
   "snapshotSerializers": [
     "<rootDir>/node_modules/enzyme-to-json/serializer"
-  ]
+  ],
+  "testEnvironment": "jsdom"
 }
