--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@babel/cli/**/minimist": "^1.2.6",
     "@babel/cli/chokidar/glob-parent": "^6.0.1",
     "@elastic/charts/**/d3-color": "^3.1.0",
-    "@types/jest/**/ansi-regex": "^5.0.1",
     "babel-plugin-add-module-exports/chokidar/glob-parent": "^6.0.1",
     "babel-plugin-inline-react-svg/**/ansi-regex": "^5.0.1",
     "babel-plugin-inline-react-svg/svgo/js-yaml": "^3.13.1",
@@ -63,10 +62,6 @@
     "enzyme/cheerio/cheerio-select-tmp/css-select/css-what": "^6.1.0",
     "enzyme/cheerio/cheerio-select-tmp/css-what": "^6.1.0",
     "html-webpack-plugin/**/ansi-regex": "^5.0.1",
-    "jest-cli/**/ansi-regex": "^5.0.1",
-    "jest-cli/**/tough-cookie": "^4.1.3",
-    "jest/**/node-notifier": "^10.0.1",
-    "jest/**/tough-cookie": "^4.1.3",
     "postcss-cli/chokidar/glob-parent": "^6.0.1",
     "postcss-inline-svg/css-select/nth-check": "^2.0.1",
     "react-view/**/ansi-regex": "^5.0.1",
@@ -152,7 +147,7 @@
     "@svgr/plugin-svgo": "^8.0.1",
     "@types/cheerio": "^0.22.31",
     "@types/enzyme": "3.10.12",
-    "@types/jest": "^24.0.6",
+    "@types/jest": "^29.0.0",
     "@types/node": "^10.17.5",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -165,7 +160,7 @@
     "autoprefixer": "^9.8.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^29.0.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
@@ -192,7 +187,7 @@
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jest": "^27.0.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-local": "^1.0.0",
     "eslint-plugin-mocha": "^8.0.0",
@@ -209,8 +204,9 @@
     "html": "^1.0.0",
     "html-format": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
+    "jest": "^29.0.0",
+    "jest-cli": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "pegjs": "^0.10.0",
