--- a/package.json
+++ b/package.json
@@ -45,15 +45,8 @@
   },
   "resolutions": {
     "**/semver": "^7.5.3",
-    "@babel/cli/**/ansi-regex": "^5.0.1",
-    "@babel/cli/**/minimist": "^1.2.6",
-    "@babel/cli/chokidar/glob-parent": "^6.0.1",
     "@elastic/charts/**/d3-color": "^3.1.0",
     "@types/jest/**/ansi-regex": "^5.0.1",
-    "babel-plugin-add-module-exports/chokidar/glob-parent": "^6.0.1",
-    "babel-plugin-inline-react-svg/**/ansi-regex": "^5.0.1",
-    "babel-plugin-inline-react-svg/svgo/js-yaml": "^3.13.1",
-    "babel-template/**/ansi-regex": "^5.0.1",
     "codesandbox/**/ansi-regex": "^5.0.1",
     "codesandbox/**/got": "^11.8.5",
     "codesandbox/axios": "^0.22.0",
@@ -133,16 +126,12 @@
   },
   "devDependencies": {
     "@axe-core/puppeteer": "4.6.1",
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.4",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-async-to-generator": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.12.1",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
+    "@babel/template": "^7.22.15",
     "@elastic/charts": "^30.2.0",
     "@elastic/eslint-config-kibana": "^0.15.0",
     "@faker-js/faker": "^8.0.1",
@@ -163,15 +152,13 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^9.8.6",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "babel-plugin-pegjs-inline-precompile": "^0.1.1",
-    "babel-template": "^6.26.0",
     "cache-loader": "^4.1.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
