--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,6 +1,12 @@
-last 2 versions
-not dead
-not IE 11
-Safari 7
 
-# Safari 7 for PhantomJS support
+Firefox > 0 and last 2 years and > 0.01%
+Chrome > 0 and last 2 years and > 0.01%
+Safari > 0 and last 2 years and > 0.01%
+Edge > 0 and last 1 years and > 0.01%
+Opera > 0 and last 2 years and > 0.01%
+> 0.2%
+not op_mini all
+not and_uc < 100
+not android < 100
+not dead
+
