--- a/package.json
+++ b/package.json
@@ -93,15 +93,6 @@
     "lint"
   ],
   "dependencies": {
-    "@types/chroma-js": "^2.4.0",
-    "@types/lodash": "4.14.192",
-    "@types/numeral": "^2.0.2",
-    "@types/react-beautiful-dnd": "^13.1.3",
-    "@types/react-input-autosize": "^2.2.1",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/react-window": "^1.8.5",
-    "@types/refractor": "^3.0.0",
-    "@types/resize-observer-browser": "^0.1.7",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
@@ -117,9 +108,7 @@
     "react-virtualized-auto-sizer": "1.0.7",
     "react-window": "^1.8.9",
     "refractor": "^3.6.0",
-    "rehype-raw": "^5.0.0",
     "rehype-react": "^6.0.0",
-    "rehype-stringify": "^8.0.0",
     "remark-emoji": "^2.1.0",
     "remark-parse": "^8.0.3",
     "remark-rehype": "^8.0.0",
@@ -151,13 +140,21 @@
     "@svgr/plugin-jsx": "^8.0.1",
     "@svgr/plugin-svgo": "^8.0.1",
     "@types/cheerio": "^0.22.31",
+    "@types/chroma-js": "^2.4.2",
     "@types/enzyme": "3.10.12",
     "@types/jest": "^24.0.6",
+    "@types/lodash": "^4.14.200",
     "@types/node": "^10.17.5",
+    "@types/numeral": "^2.0.4",
     "@types/react": "^16.9.34",
+    "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-dom": "^16.9.6",
+    "@types/react-input-autosize": "^2.2.3",
     "@types/react-is": "^16.7.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtualized-auto-sizer": "^1.0.2",
+    "@types/react-window": "^1.8.7",
+    "@types/refractor": "^3.0.5",
     "@types/url-parse": "^1.4.8",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
