--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "start-test-server-and-a11y-test": "cross-env WAIT_ON_TIMEOUT=600000 start-server-and-test start-test-server http-get://localhost:9999 test-a11y",
     "yo-doc": "yo ./generator-oui/app/documentation.js",
     "release": "node ./scripts/release.js",
-
+    "postinstall": "node ./scripts/postinstall.js",
+    "preinstall": "node ./scripts/preinstall.js",
     "version": "node ./scripts/update-changelog-version.js"
   },
   "repository": {
