--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -125,7 +125,6 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
-          cache: 'yarn'
 
       - name: Setup Yarn
         run: |
@@ -138,9 +137,12 @@ jobs:
         with:
           name: build
 
+      - name: Extract build archive
+        run: tar -xf ${{ steps.download.outputs.download-path }}/oui.tgz
+
       - name: Get Escaped Download Path
         run: |
-          RAW_OUI_PATH="${{ steps.download.outputs.download-path }}/oui.tgz"
+          RAW_OUI_PATH="${{ steps.download.outputs.download-path }}/package"
           OUI_PATH=$(echo $RAW_OUI_PATH | sed 's/\//\\\//g')
           echo "OUI_PATH=$OUI_PATH" >> "$GITHUB_ENV"
 
@@ -169,7 +171,6 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
-          cache: 'yarn'
 
       - name: Setup Yarn
         run: |
@@ -182,9 +183,12 @@ jobs:
         with:
           name: build
 
+      - name: Extract build archive
+        run: tar -xf ${{ steps.download.outputs.download-path }}/oui.tgz
+
       - name: Get Escaped Download Path
         run: |
-          RAW_OUI_PATH="${{ steps.download.outputs.download-path }}/oui.tgz"
+          RAW_OUI_PATH="${{ steps.download.outputs.download-path }}/package"
           OUI_PATH=$(echo $RAW_OUI_PATH | sed 's/\//\\\//g')
           echo "OUI_PATH=$OUI_PATH" >> "$GITHUB_ENV"
 
@@ -215,32 +219,17 @@ jobs:
             script: build-platform --linux-arm --skip-os-packages
     runs-on: ${{ matrix.os }}
     needs: build
-    defaults:
-      run:
-        working-directory: ./artifacts
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          path: ./artifacts
           repository: opensearch-project/OpenSearch-Dashboards
 
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version-file: './artifacts/.nvmrc'
+          node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
-
-      - name: Configure Yarn Cache (Linux)
-        run: echo "YARN_CACHE_LOCATION=$(yarn cache dir)" >> $GITHUB_ENV
-
-      - name: Initialize Yarn Cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.YARN_CACHE_LOCATION }}
-          key: yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-
 
       - name: Setup Yarn
         run: |
@@ -253,16 +242,18 @@ jobs:
         with:
           name: build
 
+      - name: Extract build archive
+        run: tar -xf ${{ steps.download.outputs.download-path }}/oui.tgz
+
       - name: Get Escaped Download Path
         run: |
-          RAW_OUI_PATH="${{ steps.download.outputs.download-path }}/oui.tgz"
+          RAW_OUI_PATH="${{ steps.download.outputs.download-path }}/package"
           OUI_PATH=$(echo $RAW_OUI_PATH | sed 's/\//\\\//g')
           echo "OUI_PATH=$OUI_PATH" >> "$GITHUB_ENV"
 
       - name: Update OUI version in OSD
         run: |
           find . -type f -name package.json -exec sed -i 's/"@elastic\/eui": ".*"/"@elastic\/eui": "file:${{ env.OUI_PATH }}"/g' {} \;
-
 
       - name: Get package version
         run: |
@@ -282,5 +273,5 @@ jobs:
         if: success()
         with:
           name: ${{ matrix.suffix }}-${{ env.VERSION }}
-          path: ./artifacts/target/${{ env.ARTIFACT_BUILD_NAME }}
+          path: ./target/${{ env.ARTIFACT_BUILD_NAME }}
           retention-days: 7
