--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "refractor": "^3.6.0",
     "rehype-raw": "^5.0.0",
     "rehype-react": "^6.0.0",
+    "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
     "remark-emoji": "^2.1.0",
     "remark-parse": "^8.0.3",
