Skip build and test on dependabot
Signed-off-by: Matt Provost <provomat@amazon.com>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -2,7 +2,7 @@ name: Build and test
 
 on:
   push:
-    branches: ['**', '!backport/**', '!whitesource-remediate/**']
+    branches: ['**', '!backport/**', '!dependabot/**', '!whitesource-remediate/**']
     paths-ignore:
       - '**/*.md'
   pull_request:
