--- a/package.json
+++ b/package.json
@@ -209,6 +209,7 @@
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "pegjs": "^0.10.0",
     "postcss-cli": "^7.1.2",
     "postcss-inline-svg": "^4.1.0",
