--- a/package.json
+++ b/package.json
@@ -94,14 +94,9 @@
   ],
   "dependencies": {
     "@types/chroma-js": "^2.4.0",
-    "@types/lodash": "4.14.192",
-    "@types/numeral": "^2.0.2",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-input-autosize": "^2.2.1",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
-    "@types/refractor": "^3.0.0",
-    "@types/resize-observer-browser": "^0.1.7",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
@@ -117,7 +112,6 @@
     "react-virtualized-auto-sizer": "1.0.7",
     "react-window": "^1.8.9",
     "refractor": "^3.6.0",
-    "rehype-raw": "^5.0.0",
     "rehype-react": "^6.0.0",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
@@ -155,11 +149,15 @@
     "@types/cheerio": "^0.22.31",
     "@types/enzyme": "3.10.12",
     "@types/jest": "^24.0.6",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^10.17.5",
+    "@types/numeral": "2.0.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-is": "^16.7.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtualized-auto-sizer": "1.0.1",
+    "@types/refractor": "3.0.0",
     "@types/url-parse": "^1.4.8",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -192,7 +190,6 @@
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-local": "^1.0.0",
     "eslint-plugin-mocha": "^8.0.0",
