--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@opensearch-project/oui",
   "description": "OpenSearch UI Component Library",
-  "version": "1.5.0-rc.2",
+  "version": "1.5.0",
   "license": "Apache-2.0",
   "main": "lib",
   "module": "es",
