--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*   @AMoo-Miki @rednaksi91 @KrooshalUX @BSFishy @bandinib-amzn @ashwin-pc @joshuarrrr @andreymyssak @SergeyMyssak
+*   @AMoo-Miki @rednaksi91 @bandinib-amzn @ashwin-pc @joshuarrrr @andreymyssak @SergeyMyssak
