--- a/package.json
+++ b/package.json
@@ -215,7 +215,7 @@
     "puppeteer": "^19.11.1",
     "raw-loader": "^4.0.1",
     "react": "^16.14.0",
-    "react-docgen-typescript": "^2.2.2",
+    "react-docgen-typescript": "npm:@amoo-miki/react-docgen-typescript@^2.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
