--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*   @AMoo-Miki @rednaksi91 @bandinib-amzn @ashwin-pc @joshuarrrr @andreymyssak @SergeyMyssak @virajsanghvi
+*   @AMoo-Miki @bandinib-amzn @ashwin-pc @joshuarrrr @virajsanghvi
