--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/cli/chokidar/glob-parent": "^6.0.1",
     "@elastic/charts/**/d3-color": "^3.1.0",
     "@types/jest/**/ansi-regex": "^5.0.1",
+    "@types/ws": "8.5.4",
     "babel-plugin-add-module-exports/chokidar/glob-parent": "^6.0.1",
     "babel-plugin-inline-react-svg/**/ansi-regex": "^5.0.1",
     "babel-plugin-inline-react-svg/svgo/js-yaml": "^3.13.1",
