--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "resolutions": {
     "**/semver": "^7.5.3",
+    "**/braces": "^3.0.3",
     "@babel/cli/**/ansi-regex": "^5.0.1",
     "@babel/cli/**/minimist": "^1.2.6",
     "@babel/cli/chokidar/glob-parent": "^6.0.1",
