--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "circular-dependency-plugin": "^5.2.0",
     "core-js": "^3.29.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^4.2.2",
+    "css-loader": "5.0.0",
     "cssnano": "^4.1.11",
     "deasync": "^0.1.28",
     "dedent": "^0.7.0",
