--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*   @AMoo-Miki @bandinib-amzn @ashwin-pc @joshuarrrr @virajsanghvi @ruanyl @d-buckner
+*   @AMoo-Miki @bandinib-amzn @ashwin-pc @joshuarrrr @virajsanghvi @ruanyl @d-buckner @angle943 @Maosaic @ruchidh
