Update refractor to v4
Signed-off-by: Viraj Sanghvi <vsanghvi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "react-is": "~16.3.0",
     "react-virtualized-auto-sizer": "1.0.7",
     "react-window": "^1.8.9",
-    "refractor": "^3.6.0",
+    "refractor": "^4.0.0",
     "rehype-react": "^6.0.0",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
@@ -156,7 +156,6 @@
     "@types/react-is": "^16.7.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-virtualized-auto-sizer": "1.0.1",
-    "@types/refractor": "3.0.0",
     "@types/url-parse": "^1.4.8",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -184,6 +183,7 @@
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
