--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "babel-template/**/ansi-regex": "^5.0.1",
     "cross-spawn": "^7.0.6",
     "cssnano/**/css-select/nth-check": "^2.0.1",
-    "cssnano/**/postcss": "^7.0.39",
+    "cssnano/**/postcss": "^8.0.0",
     "enzyme/cheerio/cheerio-select-tmp/css-select/css-what": "^6.1.0",
     "enzyme/cheerio/cheerio-select-tmp/css-what": "^6.1.0",
     "html-webpack-plugin/**/ansi-regex": "^5.0.1",
@@ -69,6 +69,7 @@
     "jest/**/tough-cookie": "^4.1.3",
     "postcss-cli/chokidar/glob-parent": "^6.0.1",
     "postcss-inline-svg/css-select/nth-check": "^2.0.1",
+    "postcss-inline-svg/postcss": "^8.0.0",
     "react-router/**/path-to-regexp": "^1.9.0",
     "react-view/**/ansi-regex": "^5.0.1",
     "react-view/**/minimist": "^1.2.6",
@@ -161,7 +162,7 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.1.0",
@@ -176,7 +177,7 @@
     "core-js": "^3.29.1",
     "cross-env": "^7.0.3",
     "css-loader": "5.0.0",
-    "cssnano": "^4.1.11",
+    "cssnano": "^5.0.0",
     "dedent": "^0.7.0",
     "dts-generator": "^3.0.0",
     "enzyme": "^3.11.0",
@@ -208,8 +209,9 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "pegjs": "^0.10.0",
-    "postcss-cli": "^7.1.2",
-    "postcss-inline-svg": "^4.1.0",
+    "postcss": "^8.0.0",
+    "postcss-cli": "^8.0.0",
+    "postcss-inline-svg": "^5.0.0",
     "postcss-loader": "^4.0.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
@@ -234,7 +236,7 @@
     "sass-loader": "npm:@amoo-miki/sass-loader@10.4.1-node-sass-9.0.0-libsass-3.6.5-with-sass-embedded.rc1",
     "shelljs": "^0.8.5",
     "start-server-and-test": "^2.0.0",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.1.0",
     "typescript": "4.6.4",
     "url-loader": "^4.1.0",
