Update jest to v29
Signed-off-by: Viraj Sanghvi <vsanghvi@gmail.com>

--- a/scripts/jest/config.json
+++ b/scripts/jest/config.json
@@ -47,5 +47,9 @@
   "snapshotSerializers": [
     "<rootDir>/node_modules/enzyme-to-json/serializer"
   ],
-  "testEnvironment": "jsdom"
+  "testEnvironment": "jsdom",
+  "snapshotFormat": {
+    "escapeString": true,
+    "printBasicPrototype": true
+  }
 }
