--- a/package.json
+++ b/package.json
@@ -148,9 +148,10 @@
     "@svgr/plugin-svgo": "^8.0.1",
     "@types/cheerio": "^0.22.31",
     "@types/enzyme": "3.10.12",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.5.5",
+    "@types/jsdom": "21.1.7",
     "@types/lodash": "^4.14.192",
-    "@types/node": "^10.17.5",
+    "@types/node": "16.11.7",
     "@types/numeral": "2.0.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -164,7 +165,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
@@ -204,8 +205,9 @@
     "html": "^1.0.0",
     "html-format": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
-    "jest": "^27.5.1",
-    "jest-cli": "^27.5.1",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "pegjs": "^0.10.0",
