update micromatc to 4.8.0 and other packages @types/jest "@typescript-eslint/eslint-plugin@typescript-eslint/parser babel-jest babel-plugin-add-module-exports jest jest-cli postcss-cli webpack-dev-server yeoman-generator yo
Signed-off-by: Ruchi Sharma <ruchi492@gmail.com>

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "**/semver": "^7.5.3",
     "**/braces": "^3.0.3",
     "**/@babel/runtime": "7.26.10",
+    "**/micromatch": "^4.0.8",
     "@babel/cli/**/ansi-regex": "^5.0.1",
     "@babel/cli/**/minimist": "^1.2.6",
     "@babel/cli/chokidar/glob-parent": "^6.0.1",
@@ -127,7 +128,7 @@
   },
   "devDependencies": {
     "@axe-core/puppeteer": "4.6.1",
-    "@babel/cli": "^7.10.5",
+    "@babel/cli": "^7.12.0",
     "@babel/core": "^7.11.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-async-to-generator": "^7.10.4",
@@ -147,7 +148,7 @@
     "@svgr/plugin-svgo": "^8.0.1",
     "@types/cheerio": "^0.22.31",
     "@types/enzyme": "3.10.12",
-    "@types/jest": "^24.0.6",
+    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.192",
     "@types/node": "^10.17.5",
     "@types/numeral": "2.0.2",
@@ -159,13 +160,13 @@
     "@types/refractor": "3.0.0",
     "@types/url-parse": "^1.4.8",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.33.0",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^30.0.0",
     "babel-loader": "^8.1.0",
-    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-pegjs-inline-precompile": "^0.1.1",
@@ -204,12 +205,12 @@
     "html": "^1.0.0",
     "html-format": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
+    "jest": "^30.0.0",
+    "jest-cli": "^30.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "pegjs": "^0.10.0",
-    "postcss-cli": "^7.1.2",
+    "postcss-cli": "^11.0.0",
     "postcss-inline-svg": "^4.1.0",
     "postcss-loader": "^4.0.1",
     "pre-commit": "^1.2.2",
@@ -241,9 +242,9 @@
     "url-loader": "^4.1.0",
     "webpack": "npm:@amoo-miki/webpack@4.46.0-rc.2",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.2",
-    "yeoman-generator": "^5.8.0",
-    "yo": "^4.3.1"
+    "webpack-dev-server": "^5.1.0",
+    "yeoman-generator": "^7.5.1",
+    "yo": "^5.1.0"
   },
   "peerDependencies": {
     "@types/react": "^16.9.34",
