--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "start": "cross-env WEBPACK_DEV_SERVER=true BABEL_MODULES=false webpack-dev-server --hot --config=src-docs/dev.webpack.config.js",
+    "start-react18": "cross-env WEBPACK_DEV_SERVER=true BABEL_MODULES=false webpack-dev-server --hot --config=src-docs/dev-react18.webpack.config.js",
     "test-docker": "node ./scripts/test-docker.js",
     "sync-docs": "node ./scripts/docs-sync.js",
     "build-docs": "cross-env BABEL_MODULES=false cross-env NODE_ENV=production NODE_OPTIONS=--max-old-space-size=4096 webpack --config=src-docs/webpack.config.js",
@@ -28,6 +29,7 @@
     "lint-sass-fix": "sass-lint-auto-fix -c ./.sass-lint-fix.yml",
     "test": "yarn lint && yarn test-unit",
     "test-unit": "cross-env NODE_ENV=test jest --config ./scripts/jest/config.json",
+    "test-unit-react18": "cross-env NODE_ENV=test jest --config ./scripts/jest/config-react18.json",
     "test-a11y": "node ./scripts/a11y-testing",
     "test-staged": "node scripts/test-staged.js",
     "start-test-server": "WEBPACK_DEV_SERVER=true BABEL_MODULES=false NODE_ENV=puppeteer NODE_OPTIONS=--max-old-space-size=4096 webpack-dev-server --config src-docs/dev.webpack.config.js --port 9999",
@@ -139,6 +141,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/template": "^7.10.4",
+    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
     "@elastic/charts": "^30.2.0",
     "@elastic/eslint-config-kibana": "^0.15.0",
     "@faker-js/faker": "^8.0.1",
@@ -146,6 +149,11 @@
     "@svgr/core": "^8.0.0",
     "@svgr/plugin-jsx": "^8.0.1",
     "@svgr/plugin-svgo": "^8.0.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/react-18": "npm:@testing-library/react@^14.0.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/cheerio": "^0.22.31",
     "@types/enzyme": "3.10.12",
     "@types/jest": "^29.5.5",
@@ -224,8 +232,10 @@
     "puppeteer": "^22.0.0",
     "raw-loader": "^4.0.1",
     "react": "^16.14.0",
+    "react-18": "npm:react@^18.0.0",
     "react-docgen-typescript": "npm:@amoo-miki/react-docgen-typescript@^2.3.0",
     "react-dom": "^16.12.0",
+    "react-dom-18": "npm:react-dom@^18.0.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router": "^5.3.4",
