--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -42,13 +42,9 @@ jobs:
       - name: Run linter
         run: yarn lint
 
-      - name: Run unit tests (react 16)
+      - name: Run unit tests (react 19)
         if: false # Remove with test stability
-        run: yarn test:react16
-
-      - name: Run unit tests (react 18)
-        if: false # Remove with test stability
-        run: yarn test:react18
+        run: yarn test
 
 
   build:
