Add Rubik and Source Code Pro fonts with custom typography scale
This commit introduces a comprehensive typography system for OUI 2.x
with Rubik as the primary sans-serif font and Source Code Pro for
monospace text. The changes include custom font size and spacing
scales defined in pixels for precise control, and automatic border
padding detection in Card components.

Key changes:
- Added Google Fonts imports for Rubik and Source Code Pro
- Configured custom font sizes (xs to 9xl) and spacing scale in
  Tailwind v4's @theme block using pixel values
- Set base font size to 10px on body and .oui2 elements for
  consistent inheritance
- Fixed Card component border padding by detecting border classes
  and conditionally applying padding
- Updated tailwind.config.js with font family definitions (note:
  actual configuration happens in CSS @theme block for Tailwind v4)

The typography system uses Tailwind v4's CSS-based configuration
approach where all theme customization happens in the @theme inline
block within preset.css rather than tailwind.config.js.
---
Prompt: Add Rubik and Source Code Pro fonts to the system, configure
custom font sizes and spacing in pixels, ensure base font size
inherits properly, and fix Card component border padding issues.

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   ],
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@opensearch-project/oui": "^1.23.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -125,13 +126,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@tsconfig/node20": "^20.1.6",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.3",
     "@types/react-16": "npm:@types/react@^16.14.0",
+    "@types/react-dom": "^19.0.3",
     "@types/react-dom-16": "npm:@types/react-dom@^16.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitest/browser": "^3.0.0",
     "@vitest/coverage-v8": "^3.0.0",
     "@vitest/ui": "^3.0.0",
